# Modipulate

./: .gitignore  CHANGELOG  CMakeLists.txt  Doxyfile  LICENSE  Modipulate.workspace  README.md  index.html  modipulate.project  style.css  wscript
cmake/Modules/: FindOgg.cmake  FindVorbis.cmake  Findportaudio.cmake
demos/: wscript
demos/8vb/: AnAL.lua  main.lua
demos/dr-pentris/: audio.lua  callbacks.lua  conf.lua  grid.lua  main.lua  piece.lua
demos/dr-pentris/media/: cerror_-_pigs_go_oink.xm  vhiiula-inventio_in_4k.it
demos/media/: 8vb1.it  8vb1.itq  README  dyn1.it  loop1.it  loop2.it  sponge1-slow.it
demos/modipulate-example-1/: conf.lua  main.lua
demos/modipulate-gml/test/: main.c
demos/modipulate-lua/8vb/: conf.lua  main.lua
demos/modipulate-lua/console/: conf.lua  main.lua
demos/modipulate-lua/console-new/: main.lua
demos/modipulate-lua/dr-pentris/: callbacks.lua  conf.lua  main.lua
demos/modipulate-lua/not-ddr/: conf.lua  main.lua
demos/modipulate-osc/puredata/: pd example.pd
demos/modipulate/console/: console  console.project  main.cpp  run-codelite-debug.sh  run-waf.sh  wscript_build
demos/not-ddr/: conf.lua  gem-pivi.it  main.lua  sponge1.it
doc/c/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group__global.html  group__song.html  index.html  modipulate_8h.html  modipulate_8h_source.html  modules.html  structModipulateSongInfo.html
doc/c/search/: all_64.html  all_6d.html  all_72.html  classes_6d.html  defines_6d.html  files_6d.html  functions_6d.html  search.js  typedefs_6d.html  variables_69.html  variables_6d.html  variables_6e.html  variables_73.html  variables_74.html
libmodplug-hacked/: config.h  fastmix.cpp  load_abc.cpp  load_amf.cpp  load_ams.cpp  load_dbm.cpp  load_far.cpp  load_mdl.cpp  load_med.cpp  load_mid.cpp  load_mt2.cpp  load_mtm.cpp  load_okt.cpp  load_ptm.cpp  load_s3m.cpp  load_ult.cpp  load_xm.cpp  modplug.cpp  modplug.h  snd_flt.cpp  snd_fx.cpp  sndfile.cpp  sndfile.h  sndmix.cpp  tables.h
src/: main.cpp  mod_stream.cpp  mod_stream.h  modipulate_common.h
src/itq/: itq.cpp
src/modipulate/: Array2D.h  mod_stream.cpp  mod_stream.h  modipulate.cpp  modipulate.h  modipulate.project  modipulate_common.cpp  modipulate_common.h  modipulate_dynamic.project  wscript
src/modipulate-gml/: Modipulate.extension.gmx  README.md  exports.def  modipulate_gml.c  modipulate_gml.h
src/modipulate-osc/: main.cpp  patterns.txt
src/modipulate-osc/oscpkt/: oscpkt.hh  oscpkt_demo.cc  oscpkt_test.cc
src/modipulate/libmodplug-hacked/: config.h  load_669.cpp  load_dmf.cpp  load_dsm.cpp  load_it.cpp  load_mod.cpp  load_pat.cpp  load_psm.cpp  load_stm.cpp  load_umx.cpp  load_wav.cpp  modplug.cpp  snd_dsp.cpp  snd_fx.cpp  sndfile.cpp  sndfile.h  sndmix.cpp  stdafx.h
src/modipulate/libmodplug-hacked/include/: defines.h  modplug.h
src/modipulate/libopenmpt-forked/: LICENSE  README.md  TODO
src/modipulate/libopenmpt-forked/common/: misc_util.cpp  misc_util.h  serialization_utils.cpp  serialization_utils.h  typedefs.h  version.h
src/modipulate/libopenmpt-forked/include/miniz/: timer.cpp
src/modipulate/libopenmpt-forked/libopenmpt/: libopenmpt.hpp  libopenmpt.sln  libopenmpt.vcxproj  libopenmpt.vcxproj.filters  libopenmptDLL.vcxproj  libopenmptDLL.vcxproj.filters  libopenmpt_c.cpp  libopenmpt_cxx.cpp  libopenmpt_impl.cpp  libopenmpt_impl.hpp  libopenmpt_modplug.vcxproj  libopenmpt_modplug.vcxproj.filters  libopenmpt_test.sln  libopenmpt_test.vcxproj  libopenmpt_test.vcxproj.filters
src/modipulate/libopenmpt-forked/libopenmpt/dox/: changelog.md  dependencies.md
src/modipulate/libopenmpt-forked/openmpt123/: openmpt123.sln  openmpt123.vcxproj  openmpt123.vcxproj.filters
src/modipulate/libopenmpt-forked/soundlib/: ChunkReader.h  Fastmix.cpp  FileReader.h  ITCompression.cpp  ITTools.cpp  ITTools.h  Load_digi.cpp  Load_gdm.cpp  Load_imf.cpp  Load_it.cpp  Load_itp.cpp  Load_itq.cpp  Load_mo3.cpp  MixerInterface.h  ModChannel.cpp  ModChannel.h  ModInstrument.h  ModSample.cpp  ModSample.h  ModSequence.cpp  SampleIO.cpp  SampleIO.h  Snd_defs.h  Snd_fx.cpp  Sndfile.cpp  Sndfile.h  Sndmix.cpp  SoundFilePlayConfig.cpp  SoundFilePlayConfig.h  WAVTools.cpp  XMTools.cpp  decode_vorbis.cpp  decode_vorbis.h  mod_specifications.cpp  mod_specifications.h  modcommand.cpp  modcommand.h  modsmp_ctrl.cpp  pattern.cpp  patternContainer.cpp  (+6 more)
src/modipulate/libopenmpt-forked/soundlib/plugins/: DmoToVst.cpp  PlugInterface.h  PluginManager.cpp
src/modipulate/libopenmpt-forked/test/: test.cpp  test.h
src/modipulate_lua/: exports.def  main.cpp  modipulate_lua.project  utils.cpp  utils.h  wscript
